[package]
name = "aoc2023"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "aoc2023"
path = "src/lib.rs"

[[bin]]
name = "aoc2023"
path = "src/main.rs"

[dependencies]
log = "0.4.20"

[dev-dependencies]
rstest = "0.18.2"
